<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyWordBook</string>
    <string name="action_settings">Settings</string>
    <string name="wordbook">前端</string>
    <string name="learnnewword">服务器</string>
    <string name="test">测试</string>
    <string name="cnen">搜索</string>
    <string name="more">更多</string>
    <string name="addwbook">添加</string>
    <string name="edit">编辑</string>
	<string name="search">搜索</string>
</resources>
